<resources>
    <string name="app_name">HomeWork</string>

    <!-- DEFAULTS-->
    <string name="default_username">Guest</string>
    <string name="default_date">01.01.2019</string>
    <string name="default_city">Samara</string>
    <string name="default_temp">24</string>
    <string name="default_country">RU</string>

    <!-- MENU -->
    <string name="menu_add">Добавить</string>
    <string name="menu_clear">Очистить</string>
    <string name="action_search">Найти</string>
    <string name="menu_refresh">Обновить</string>
    <string name="search_hint">Искать город</string>

    <!-- NAVIGATION -->
    <string name="sync">Синхронизировать</string>
    <string name="download_update">Скачать обновление</string>
    <string name="contact_with_author">Написать автору</string>
    <string name="about">О разработчике</string>
    <string name="exit">Выйти</string>

    <!-- CAPTIONS -->
    <string name="caption_meet">Представьтесь, пожалуйста</string>

    <!-- BUTTONS -->
    <string name="btStartTask">Запустить AsyncTask</string>
    <string name="btStartService">Запустить IntentService</string>
    <string name="bt_yes">Да</string>
    <string name="bt_no">Нет</string>
    <string name="bt_cancel">@string/cancel</string>
    <string name="bt_change">@string/change</string>

    <!-- ERRORS -->
    <string name="err_whatsapp_is_not_installed">WhatsApp не установлен</string>
    <string name="err_runtime">Ошибка выполнения: </string>
    <string name="err_define_location">Не удалось определить местоположение</string>

    <!-- COMMON -->
    <string name="empty"> </string>
    <string name="success">Успешно завершено</string>
    <string name="username">Как вас зовут?</string>
    <string name="change">Изменить</string>
    <string name="cancel">Отмена</string>
    <string name="prepare">Подготовка</string>
    <string name="done">Выполнено</string>

    <string name="humidity">Humidity</string>
    <string name="pressure">Pressure</string>
    <string name="wind">Wind</string>

    <!-- PREFERENCES -->
    <string name="pref_ava_path">preference_avatar</string>
    <string name="pref_username">preference_username</string>

    <!-- WHATSAPP -->
    <string name="whatsapp_with_username">Здравствуйте! Меня зовут %s. У меня есть вопрос по приложению %s:</string>
    <string name="whatsapp_default">Здравствуйте! У меня есть вопрос по приложению</string>

    <!-- TEXT -->
    <string name="about_item_text">Автор: Коновалов Денис. Проект выполнен в качестве домашнего задания в рамках обучения программированию для платформы Android</string>
    <string name="hint_username">@string/username</string>

    <string name="icon_url">http://openweathermap.org/img/w/%s.png</string>
</resources>
